[gd_scene load_steps=28 format=2]

[ext_resource path="res://player/owl_player.gd" type="Script" id=1]
[ext_resource path="res://assets/audio/VUX-Bite.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/audio/Hit.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/audio/Powerup.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/player/2 Owlet_Monster/Owlet_Monster_Death_8.png" type="Texture" id=5]
[ext_resource path="res://assets/player/2 Owlet_Monster/Owlet_Monster_Idle_4.png" type="Texture" id=6]
[ext_resource path="res://assets/player/2 Owlet_Monster/Owlet_Monster_Run_6.png" type="Texture" id=7]

[sub_resource type="CapsuleShape2D" id=1]
radius = 7.68462
height = 6.44873

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 6 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 6 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 5 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 5 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 5 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 5 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 5 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 5 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 7 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 7 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 7 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 7 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 7 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=20]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 8.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": false,
"name": "hurt",
"speed": 10.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "run",
"speed": 10.0
} ]

[node name="Owl_player" type="Area2D"]
scale = Vector2( 2.5, 2.5 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.9, 5.2 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -2, 0 )
frames = SubResource( 20 )
animation = "idle"
frame = 3
playing = true

[node name="FoodAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="HitAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="CherryAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="powerUp" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_Owl_player_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Owl_player_body_entered"]
[connection signal="timeout" from="powerUp" to="." method="_on_powerUp_timeout"]
